Fri Mar 23 22:06:11 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/WIN32_Asynch_IO.cpp: Fixed possible heap corruption in
          ACE_SOCK_Dgram_Read_Dgram::recv(). Thank you to
          Dmytro Ovdiienko <dmitriy.ovdienko@gmail.com> for unconvering this.

        * THANKS: Added Dmytro to the Hall of Fame.

Thu Mar 22 16:23:14 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Dgram_Mcast.h: Corrected the description of conditions
          under which using OPT_NULLIFACE_ALL works and neatened things up.

        * tests/Multicast_Test.cpp: Turn on IP_MULTICAST_LOOP all the time.
          This test requires it and it's not universally the default.

Thu Mar 22 13:03:46 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ARGV.cpp:
        * ace/Acceptor.cpp:
        * ace/Asynch_Acceptor.cpp:
        * ace/Cached_Connect_Strategy_T.cpp:
        * ace/Lib_Find.cpp:
        * ace/Strategies_T.cpp:
        * ace/Timer_Heap_T.cpp:
          Fixed coverity errors

Wed Mar 21 21:57:40 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Dgram_Mcast.cpp (subscribe_ifs): Expanded the use of
          code to scan interfaces to be always, not just for IPv6, when
          subscribing with OPT_NULLIFACE_ALL and no specific interface.
          Also replaced use of ACE_OS::if_nameindex with getifaddr() when
          it's available (which was only on Linux anyway) so checks
          for interface up and multicastable can be made before joining.
          The code now works for systems with ACE_HAS_GETIFDADDR (incl.
          Linux, which was my main issue driving this) and Win32. The others
          end up in the old get_ip_interfaces code which will never work
          anywhere as far as I can tell because it tries to subscribe to an
          interface named with the IP address in string form.

        * tests/Multicast_Test.cpp: Removed hack force of interface "lo0"