@@ -1,3 +1,14 @@
+Sat Mar 24 21:53:13  UTC 2012  Steve Huston  <shuston@riverace.com>
+
+        * ace/SOCK_Dgram_Mcast.cpp (subscribe_ifs): For Windows, handle IPv6
+          and IPv4 differently. The make_multicast_ifaddr() call that will end
+          up being made for IPv4 wants the interface's IP address, not name.
+
+        * bin/MakeProjectCreator/config/acedefaults.mpb:
+        * bin/MakeProjectCreator/config/ipv6.mpb: Moved the lit_lib for iphlpapi
+          on Windows from the IPv6 base to acedefaults. SOCK_Dgram_Mcast.cpp
+          uses it for both IPv4 and IPv6 now.
+
 Fri Mar 23 22:06:11 UTC 2012  Steve Huston  <shuston@riverace.com>
 
         * ace/WIN32_Asynch_IO.cpp: Fixed possible heap corruption in
